Make sure sidebar is full-width on mobile

--- a/inst/components/card.scss
+++ b/inst/components/card.scss
@@ -15,7 +15,7 @@
         margin-bottom: 0;
       }
     }
-    .bslib-sidebar-layout {
+    > .bslib-sidebar-layout {
       border-top-left-radius: 0;
       border-top-right-radius: 0;
     }
