--- a/inst/components/sidebar.scss
+++ b/inst/components/sidebar.scss
@@ -11,8 +11,8 @@ $bslib-sidebar-icon-size: $spacer !default;
   --bslib-collapse-toggle-border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
   --bslib-collapse-toggle-transform: 90deg;
   --bslib-collapse-toggle-right-transform: -90deg;
-  
-  display: grid;
+
+  display: grid !important;
   // Should always be defined as an inline style on the layout_sidebar() container
   grid-template-columns: var(--bslib-sidebar-columns);
   position: relative;
@@ -169,6 +169,7 @@ $bslib-sidebar-icon-size: $spacer !default;
     > .sidebar {
       grid-row: 1 / 2;
       grid-column: 1 / 2;
+      width: 100%;
       border: none;
       border-top-left-radius: inherit;
       border-top-right-radius: inherit;
